# python_package_example

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: build-and-test.yml  deploy-docs.yml
docs/source/: conf.py  index.rst
my_package/: __init__.py  core.py
tests/: test_core.py
