[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "my_package"
description = "A sample Python project"
authors = [
    {name = "Pasquale Claudio Africa", email = "pafrica@sissa.it"}
]

readme = "README.md"
license = "Unlicense"

version = "0.0.1"

requires-python = ">=3.7"

dependencies = []

[project.optional-dependencies]
test = ["pytest"]
docs = ["sphinx"]

[tool.setuptools.packages.find]
where = ["my_package"]
